--- a/games/game2.html
+++ b/games/game2.html
@@ -31,10 +31,10 @@
     <div id="Dogecoin" class="container-fluid my-5">
       <div class="d-flex flex-column align-items-center text-center">
         <!-- Game 2 iframe -->
+        <!-- style="width: 300px; height: 617px" -->
         <iframe
-          class="my-2"
+          class="aspect-ratio-mobile my-2"
           src="https://i.simmer.io/@JPena208/dogecoin-to-the-moon"
-          style="width: 300px; height: 617px"
         ></iframe>
 
         <span class="text-white">
