--- a/games/game4.html
+++ b/games/game4.html
@@ -32,19 +32,19 @@
       <div class="d-flex flex-column align-items-center">
         <!-- Game 4 iframe -->
         <iframe
+          class="aspect-ratio-16-9"
           src="https://i.simmer.io/@JPena208/roguelike"
-          style="width: 1280px; height: 720px"
         ></iframe>
       </div>
     </div>
 
     <!-- Stuff under game -->
-    <div class="container mx-5 my-2 text-center">
-      <div class="d-flex flex-column flex-md-row justify-content-between">
+    <div class="w-75 mx-auto text-center">
+      <div class="d-flex flex-column flex-md-row justify-content-around">
         <span class="text-white">
           Refresh the page to play again after clicking quit.
         </span>
-        <span class="me-auto mx-3 fst-italic text-danger"
+        <span class="me-auto mx-3 my-2 my-md-0 fst-italic text-danger"
           >Not playable on mobile.</span
         >
 
