--- a/games/game3.html
+++ b/games/game3.html
@@ -44,12 +44,11 @@
         <span class="text-white">
           Refresh the page to play again after clicking quit.
         </span>
-        <span class="me-auto mx-3 my-2 my-md-0 fst-italic text-danger"
-          >Not playable on mobile.</span
-        >
 
         <!-- back button  -->
-        <a href="../index.html#game3" class="btn btn-primary">Back</a>
+        <a href="../index.html#game3" class="btn btn-primary my-3 my-md-0"
+          >Back</a
+        >
       </div>
     </div>
 
